--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --env-file=.env ./Routes/indexRoute.js"
+    "start": "node ./routes/indexRoute.js"
   },
   "keywords": [],
   "author": "",
